--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
-	<meta name="description" content="Nina Carducci, photographe à Bordeaux immortalisant des évênements tels que des concerts et mariages. Fige des moments en entreprises ainsi que des portraits.">
+	<meta name="description" content="Nina Carducci, photographe à Bordeaux immortalisant des évènements tels que des concerts et mariages. Fige des moments en entreprise ainsi que des portraits.">
 	<meta property="og:site_name" content="NinaCarducci" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://nina-carducci.github.io/" />
 	<meta property="og:title" content="Nina Carducci - Photographe Bordeaux" />
-	<meta property="og:description" content="Nina Carducci, photographe à Bordeaux immortalisant des évênements tels que des concerts et mariages. Fige des moments en entreprises ainsi que des portraits." />
+	<meta property="og:description" content="Nina Carducci, photographe à Bordeaux immortalisant des évènements tels que des concerts et mariages. Fige des moments en entreprise ainsi que des portraits." />
 	<meta property="og:image" content="./assets/images/gallery/concerts/austin-neill-concert.webp" />
 	<meta name=”twitter:card” content="summary" />
 	<meta name=”twitter:site” content="https://nina-carducci.github.io/" />
 	<meta name=”twitter:title” content="Nina Carducci - Photographe Bordeaux" />
-	<meta name=”twitter:description” content="Nina Carducci, photographe à Bordeaux immortalisant des évênements tels que des concerts et mariages. Fige des moments en entreprises ainsi que des portraits." />
+	<meta name=”twitter:description” content="Nina Carducci, photographe à Bordeaux immortalisant des évènements tels que des concerts et mariages. Fige des moments en entreprise ainsi que des portraits." />
 	<meta name=”twitter:image” content="./assets/images/gallery/concerts/austin-neill-concert.webp" />
 	<script type="application/ld+json">
 		{
